[project]
name = "resolve-mcp"
version = "0.1.0"
description = "DaVinci Resolve integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "DaVinci Resolve MCP Contributors", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.scripts]
resolve-mcp = "resolve_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/filmcademy/resolve-mcp"
repository = "https://github.com/filmcademy/resolve-mcp"
